<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="Images"
        app:title="Images"
        app:iconSpaceReserved="false">

        <ListPreference
            app:defaultValue="Nextcloud"
            app:entries="@array/cloud_preference_entries"
            app:entryValues="@array/cloud_preference_entries"
            app:key="cloud_preference"
            app:iconSpaceReserved="false"
            app:summary="@string/pref_cloud_service_summary"
            app:title="@string/pref_title_cloud_service" />

        <EditTextPreference
            app:key="cloud_username"
            android:selectAllOnFocus="true"
            app:singleLine="true"
            app:iconSpaceReserved="false"
            app:summary="@string/pref_cloud_username_summary"
            app:title="@string/pref_title_cloud_username" />

        <EditTextPreference
            app:key="cloud_password"
            android:selectAllOnFocus="true"
            app:singleLine="true"
            app:iconSpaceReserved="false"
            app:summary="@string/pref_cloud_password_summary"
            app:title="@string/pref_title_cloud_password" />

        <EditTextPreference
            app:key="cloud_host_name"
            android:selectAllOnFocus="true"
            app:singleLine="true"
            app:iconSpaceReserved="false"
            app:defaultValue="https://ncld.ips.biba.uni-bremen.de/"
            app:summary="@string/host_name_summary"
            app:title="@string/host_name_title" />


    </PreferenceCategory>

</PreferenceScreen>