<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_activity"
        android:background="@drawable/background_gradient"
        tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/coala_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_coala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fugaz_one"
        android:text="Coala"
        android:textColor="@color/brown"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_coala"
        android:textStyle="bold"
        android:textColor="@color/brown"
        android:textSize="@dimen/_22ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app"
        android:text="@string/login_btn_txt"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorAccent"
        android:theme="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="@dimen/_10sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/login_redirect_text"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>