<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/card_list_margin_top"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/defaultMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/landing_default_message"
        android:textAlignment="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardList"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:listitem="@layout/mycroft_card_layout"
        android:layout_marginBottom="@dimen/card_list_margin_bottom" />



    <RelativeLayout
        android:id="@+id/action_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/voxswitch2"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:button="@drawable/volume_toggle"
            android:checked="false"
            android:textOff=""
            android:textOn="" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/voxswitch"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:button="@drawable/volume_toggle"
            android:checked="false"
            android:textOff=""
            android:textOn="" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/kbMicSwitch"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_4sdp"
            android:layout_toEndOf="@id/voxswitch"
            android:background="@android:color/transparent"
            android:button="@drawable/kb_to_mic"
            android:checked="true"
            android:textOff=""
            android:textOn="" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/micButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/speech_prompt"
            android:src="@drawable/mic_button" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/utteranceInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/sendUtterance"
            android:layout_toEndOf="@id/kbMicSwitch"
            android:inputType="textShortMessage"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sendUtterance"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toLeftOf="@id/voxswitch2"
            android:contentDescription="@string/send_utterance"
            android:src="@drawable/send_button"
            android:visibility="invisible" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/scanButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:paddingStart="@dimen/_5sdp"
            android:layout_alignBottom="@id/micButton"
            android:layout_toEndOf="@id/micButton"
            android:src="@drawable/qrcode" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/uploadButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignBaseline="@id/micButton"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/scanButton"
            android:scaleType="fitCenter"
            android:src="@drawable/upload_icon"
            android:visibility="invisible"
            tools:srcCompat="@drawable/upload_icon" />

    </RelativeLayout>

</RelativeLayout>